fix: fixed checkbox alignment chore: bump version to 0.2.15

--- a/src/styles/components/_filters.scss
+++ b/src/styles/components/_filters.scss
@@ -71,7 +71,7 @@
     width: 14px;
     height: 14px;
     flex-shrink: 0;
-    margin: 0 12px 0;
+    margin: 0 12px 0 0;
     font-size: 14px;
   }
 }
